--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ rel="stylesheet">
                     </a>
                 </li>
                 <li>
-                    <a class="contact">
+                    <a href="contact.html" class="home">
                         Contact Us
                     </a>
                 </li>
