--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@ rel="stylesheet">
                 Our mission is to inspire innovation and cultivate technical skills among our members through a 
                 variety of activities, including workshops, competitions, guest lectures, and hands-on projects.
                  From designing and building autonomous robots to programming complex algorithms, members have the 
-                 opportunity to gain valuable experience and push the boundaries of what is possible in the field of
-                 robotics.
+                 opportunity to gain valuable experience.
 
 
             </div>
