--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ rel="stylesheet">
             <h1 class="Heading">Things you will be learning</h1>
         </div>
         <div id="brochure">    
-            <a href="Misc/brochure.pdf"  target="_blank" download="brochure">
+            <a href="Misc/brochure.pdf"  target="_blank" download="BROCHURE1.pdf">
                 <button id="download">Download Brochure</button>
             </a>
         </div>
@@ -206,7 +206,7 @@ rel="stylesheet">
                     <div class="footer-col">
                         <h4>follow us</h4>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook-f"><img src="images/facebook.png"></i></a>
+                            /*<a href="#"><i class="fab fa-facebook-f"><img src="images/facebook.png"></i></a>*/
                             <a href="https://www.instagram.com/robotics_dypiemr_club?utm_source=qr&igsh=MWVhcHN5emh6dXN0aQ==" target="_blank">
                                 <i class="fab fa-instagram"><img src="images/instagram.png"></i></a>
                             <a href="http://www.linkedin.com/in/dypiemr-robotics-club-9a69692b7" target="_blank"><i class="fab fa-linkedin-in"><img src="images/linkedin.png"></i></a>
