--- a/events.html
+++ b/events.html
@@ -45,10 +45,10 @@ rel="stylesheet">
             </section>
             <section class="hero">
             <section class="upcoming">
-                <div class="uptext"><h1 class="upcomingtext">Upcoming Events</h1></div>
+                <div class="uptext"><h1 class="upcomingtext">Past Events</h1></div>
                 <div class="cal">
-                    <img src="images/calendar.png" height="40px" width="40px">
-                    <h1 style="margin-left: 25px; font-weight: 400;"> 4th-5th March Robotics Workshop</h1>
+                    <!--<img src="images/calendar.png" height="40px" width="40px">-->
+                    <h1 style="margin-left: 25px; font-weight: 400;"> Arduino Robotics Workshop</h1>
                 </div>
                 <div class="workshopimg"><img src="images/workshop.png" height="800" width="1035" ></div>
             </section>
