--- a/events.html
+++ b/events.html
@@ -48,7 +48,7 @@ rel="stylesheet">
                 <div class="uptext"><h1 class="upcomingtext">Past Events</h1></div>
                 <div class="cal">
                     <!--<img src="images/calendar.png" height="40px" width="40px">-->
-                    <h1 style="margin-left: 25px; font-weight: 400;"> Arduino Robotics Workshop</h1>
+                    <h1 style="font-weight: 400;"> Arduino Robotics Workshop</h1>
                 </div>
                 <div class="workshopimg"><img src="images/workshop.png" height="800" width="1035" ></div>
             </section>
